--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:name=".App"
         android:supportsRtl="true"
-        android:theme="@style/Theme.VideoPlayer">
+        android:theme="@style/Theme.VideoPlayer"
+        android:usesCleartextTraffic="true">
         <activity android:name=".ui.MainActivity"
             android:exported="true">
             <intent-filter>
