Refactored ViewModel, moved objects from VideoDetailFragment.kt to the viewModel (Where They should have been from the first)
Changed the name of ui package, changed ActivityMain name to ActivityVideo

Cleaning the code, Running the code and Testing the App again

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.VideoPlayer"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.MainActivity"
+        <activity android:name=".view.VideoActivity"
             android:exported="true"
             android:configChanges="screenSize|orientation">
             <intent-filter>
